# afterburner_firmware

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
components/ads1220/: CMakeLists.txt  ads1220.c
components/ads1220/include/: ads1220.h
components/board/: CMakeLists.txt
components/board/include/: board.h
components/cJSON/: CMakeLists.txt
components/ina260/: CMakeLists.txt  ina260.c
components/ina260/include/: ina260.h
components/led_control/: CMakeLists.txt  led_control.c
components/led_control/include/: led_control.h
components/max31865/: CMakeLists.txt  max31865.c
components/max31865/include/: max31865.h
components/pd/: CMakeLists.txt  pd.c
components/pd/include/: pd.h
components/pid/: CMakeLists.txt  pid.c
components/pid/include/: pid.h
main/: CMakeLists.txt  idf_component.yml  main.c
